--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-# Ensure enough heap space during deployment
-org.gradle.jvmargs=-Xmx3G
-# It is said that daemon often brings more issues, so we disable it.
+# According to actual run on my machine, 4G memory is not enough to run build for all subprojects.
+# Therefore, we give 8G memory to Gradle here.
+# In case of OutOfMemoryError, try increasing this to 16G or higher.
+org.gradle.jvmargs=-Xmx8G
 org.gradle.daemon=false
